fix cropper & add modal to permission to projects in program

--- a/projects/social_platform/src/app/office/program/detail/main/main.component.scss
+++ b/projects/social_platform/src/app/office/program/detail/main/main.component.scss
@@ -397,3 +397,52 @@
     margin-top: 20px;
   }
 }
+
+
+.cancel {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  max-height: calc(100vh - 40px);
+  padding: 40px 0 80px;
+  overflow-y: auto;
+
+  @include responsive.apply-desktop {
+    width: 50%;
+  }
+
+  &__cross {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 32px;
+    height: 32px;
+    cursor: pointer;
+
+    @include responsive.apply-desktop {
+      top: 8px;
+      right: 8px;
+    }
+  }
+
+  &__top {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+  }
+
+  &__title {
+    text-align: center;
+  }
+
+  &__text {
+    text-align: center;
+  }
+
+  &__button {
+    margin-top: 20px;
+  }
+
+}
